--- a/2-PageSummary/Summary.tex
+++ b/2-PageSummary/Summary.tex
@@ -51,20 +51,21 @@ Shuang Zhang
 
 \section{Project Context and Objectives}
 %Who is your client? What problem did you have to solve? Why is that problem interesting or important?
-The Lighthouse team collaborated with Microsoft and the Guide Dog Associations to produce applications which can improve the experience of visually impaired users. Since few environments and applications were designed for the huge amount of blind and partly sighted individuals it is difficult for them to move around especially in an unfamiliar environment without assistance. 
+The Lighthouse team collaborated with Microsoft and the Guide Dog Association to produce applications which can improve the experience of visually impaired users. Since few environments and applications were designed for the huge amount of blind and partly sighted individuals it is difficult for them to move around especially in an unfamiliar environment without assistance. 
 
-Microsoft is both the sponsor and the client in this project and particular field of study was to explore the use cases for wearable sensors in aiding the visually impaired in navigating an indoor environment. Also, the client wanted the team to use low-cost, off-of-shelf hardware in this project and to use a technique called sensor fusion to attain acceptable accuracy.
 
-Finally, Lighthouse team created a platform for dynamic indoor obstacles mapping using wearable sensors. Deliverables included an Obstacle API which allowed for querying for obstacles in an area, an obstacle processing platform and an Android application that collects data and gives users feedback. After testing, the quality of the project meet the client's expectations.
+Microsoft is both the sponsor and the client in this project and particular field of study was to explore the use cases for wearable sensors in aiding the visually impaired in navigating an indoor environment. Also, the client wanted the team to use low-cost, off-the-shelf hardware in this project and to use a technique called sensor fusion to attain acceptable accuracy.
+
+Finally, Lighthouse team created a platform for dynamic indoor obstacle mapping using wearable sensors. Deliverables included an Obstacle API which allowed for querying for obstacles in an area, an obstacle processing platform and an Android application that collects data and gives users feedback. After testing, the quality of the project met the client's expectations.
 
 \section{Achievements}
 %What software and other artifacts have you delivered?
 \subsection{Obstacle mapping platform}
-The team delivered a platform that gatheres data from sensor and pushes them to the cloud throug a component called the Obstacle API which handles communication between data collection sensors and the processing platform. The obstacle API also provides an interface to query the platform for obstacles in a specified area. 
+The team delivered a platform that gatheres data from sensors and pushes them to the cloud through a component called the Obstacle API which handles communication between data collection sensors and the processing platform. The obstacle API also provides an interface to query the platform for obstacles in a specified area. 
 
-The data sent through the Obstacle API is sent through a processing pipeline that performs filtering, aggregation and other steps to produce estimated locations of obstacles in the area. The pipeline is implemented in Apache Kafaka and Apache Spark and uses sensor fusion techniques to increase the accuracy of the obstacle location estimation. 
+The data sent through to the Obstacle API is forwared to a processing pipeline that performs filtering, aggregation and other steps to produce estimated locations of obstacles in the area. The pipeline is implemented in Apache Kafaka and Apache Spark and uses sensor fusion techniques to increase the accuracy of the obstacle location estimation. 
 
-An android application was created to show query the Obstacle API to provide the user with details of obstacles in surrounding area. It showes the obstacles on the map that is centered on the location of the user.
+An android application was created to query the Obstacle API to provide the user with details of obstacles in surrounding area. It shows the obstacles on the map that is centered on the location of the user.
 
 \subsection{Secondary deliverables}
 The MSc CS students in this team worked on collecting data from sensors and sending the readings through the Obstacle API. The also researched interaction and feedback mechanisms that the client wanted explored.
@@ -73,7 +74,7 @@ The MSc CS students in this team worked on collecting data from sensors and send
 \subsection{Testing strategy}
 Unit testing, load testing and integration testing were performed on each component in the project. Besides that, other testing, such as testing the response latency and the positioning accuracy were also used in this project to test the quality of the project.
 \subsection{Results}
-In the unit testing, the branch and statement coverage reaches 100\% according to EclEmma, on the components that were evaluated through unit tests. And the result of load testing proved the platform met performance requirements. When perform the integration testing, results with sensor fusion was better than that without sensor fusion in both noisy and no noise situation.
+In the unit testing, the branch and statement coverage reaches 100\% according to EclEmma, on the components that were evaluated through unit tests. The result of load testing proved the platform met performance requirements. Upon performing the integration testing, results with sensor fusion showed desirable results compared to those without sensor fusion in both noisy and noiseless situations.
 \section{Impact}
 Microsoft
 \begin{itemize}
@@ -82,19 +83,19 @@ Microsoft
 \end{itemize}
 Visually impaired people
 \begin{itemize}
-\item[.] The Lighthouse project help them move around easily and avoid the barriers without assistance from others.
-\item[.] It also help them regain the confidence of exploring the world and become more independent.
+\item[.] The Lighthouse project help them move around easily and avoid the obstacles with minimal assistance from others.
+\item[.] It will also fortify them with confidence to explore the world and become more independent in their day to day lives.
 \end{itemize}
 
 \section{Challenges}
 %Was your project subject to significant constraints and difficulties (technical, organisational, logistics, etc.)? How did you respond to these constraints and difficulties?
 \begin{itemize}
-\item[.] The initial plan of using device from Electrical Engineering students failed due to the poor quality of the hardware. We moved the focus of the project away from that which proved successful.
+\item[.] The initial plan of using hardware from Electrical Engineering students failed due to its poor quality. We moved the focus of the project away from that which proved unsuccessful.
 \item[.] The testing was not performed with real data because the CS students didn't deliver expected data till the end of project. We tested the project with a simulator.
-\item[.] Implementation of simulator decoupled the work of the team from the CS students projects.
+\item[.] Implementation of the simulator decoupled the work of the team from the CS students projects.
 \item[.] The hardware requirements of the technologies used was underestimated initially. Quick upgrade of hardware mitigated the risk.
 \item[.] Limitations in the way networking is done in Android required the team to rewrite Obstacle API.
-\item[.] Sensor fusion techniques vary greatly in their use and implementation, the team analysed each and selected one that fit the purpose.
+\item[.] Sensor fusion techniques vary greatly in their use and implementation, the team analysed each and selected one that fits the purpose.
 \end{itemize}
 
 
@@ -102,9 +103,9 @@ Visually impaired people
 \begin{itemize}
 \item[.] Research into hardware requirements of frameworks should be done early.
 \item[.] Identification of sensor fusion techniques is necessary and must fit the specific purpose of use and the type of inputs available.
-\item[.] Risk management plan is valuable to avoid failure of the project, decoupling of components provide risk mitigation.
+\item[.] Managing risk is valuable in ensuring the project does not fail and decoupling of components provided risk mitigation.
 \item[.] Investigate the limitations of platforms like Android early to mitigate the risk of wasted effort.
-\item[.] New programming language maybe make coding easier, such as Scala for Spark. Library support is not equal with regards to all languages.
+\item[.] New programming language may ease coding particularly Scala for Spark. Library support differs with regards to programming languages.
 \end{itemize}
 
 \end{document}
